...
            "state" : "translated",
            "value" : "Allow Notifications"
          }
        }
      }
    },
    "Amount" : {

    },
    "Are you experiencing any of:" : {

    },
    "Are you sure you want to delete this lab record? This action cannot be undone." : {
...
        }
      }
    },
    "Burden of illness (select only one)" : {

    },
    "Cancel" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancel"
          }
...
        }
      }
    },
    "Date: %@" : {

    },
    "Delete" : {

    },
    "Delete Lab Record" : {

    },
    "Delete Medication" : {
...
            "state" : "new",
            "value" : "Dose: %1$@ %2$@"
          }
        }
      }
    },
    "Edit" : {

    },
    "Enter Data Manually" : {

    },
    "Enter Lab Results" : {
...
        }
      }
    },
    "Max value: %@" : {

    },
    "Medication List" : {

    },
    "Medication Name" : {

    },
    "Medications" : {

    },
    "Mild symptoms (+5)" : {

    },
    "Min value: %@" : {
...
    "No hypotension (sBP ≥90 mmHg) (+5)" : {

    },
    "No lab results recorded" : {

    },
    "No medications recorded" : {

    },
    "No neutrophil count data available." : {

    },
    "No oxygen saturation data available." : {
...
    "Reconnect" : {

    },
    "Record & Track Symptoms" : {

    },
    "Records" : {

    },
    "Save" : {

    },
    "Schedule" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
...
