...
    
    func configure() {
        loadMedications() // Load data on startup
        if FeatureFlags.mockMedData {
            do {
                mockMedData = [
                    try MedicationEntry(date: Date(), name: "test", doseValue: 1, doseUnit: .mgUnit)
                ]
            } catch {
                print("Failed to load mock medication data")
            }
        }
    }
...
