...
                }
            )
        }
        .alert("Delete Medication", isPresented: $showDeleteAlert) {
                Button("Delete", role: .destructive) {
                    medicationManager.deleteMedEntry(at: deleteMedicationIndex)
                }.accessibilityIdentifier("MedDeleteAlertButton")
                Button("Cancel", role: .cancel) {}
        } message: {
            Text("Are you sure you want to delete this medication record? This action cannot be undone.")
        }
    }
}
...
